dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Pricing_Item__c.object
<CustomObject>
    <description>Pricing Items selected for Service Bundle</description>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of Pricing Item in Billing System</description>
        <inlineHelpText>ID of Pricing Item in Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <description>Type of Bundle (information taken from related Service Bundle)</description>
        <formula>Service_Bundle__r.BundleType__r.Label_Eng__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of Bundle (information taken from related Service Bundle)</inlineHelpText>
        <label>Bundle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of Pricing Item from CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Pricing Item from CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <description>Type of Component (information taken from related Service Component)</description>
        <formula>Service_Component__r.Component__r.Label_Eng__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of Component (information taken from related Service Component)</inlineHelpText>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount assigned for given Price [%]</description>
        <inlineHelpText>Discount assigned for given Price [%]</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Product_ID__c</fullName>
        <description>Financial Product ID / GTS Code assigned for given Price</description>
        <inlineHelpText>Financial Product ID / GTS Code assigned for given Price</inlineHelpText>
        <label>Financial Product ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Product_Value_c__c</fullName>
        <description>Value, that allows verification of Financial Product ID algorithm (stores information about parameters used in the assignment process)</description>
        <inlineHelpText>Value, that allows verification of Financial Product ID algorithm (stores information about parameters used in the assignment process)</inlineHelpText>
        <label>Financial Product Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Description__c</fullName>
        <description>Internal description of Pricing Item (provided during product configuration; will not be visible to Customer)</description>
        <inlineHelpText>Internal description of Pricing Item (provided during product configuration; will not be visible to Customer)</inlineHelpText>
        <label>Internal Description</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <description>Description, that will be visible to Customer on the Invoice</description>
        <inlineHelpText>Description, that will be visible to Customer on the Invoice</inlineHelpText>
        <label>Invoice Description</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoicing_Name__c</fullName>
        <description>Name of Pricing Item, that will be presented on the Invoice (if no Name will be provided during configuration, Label defined in Product Catalog will be taken)</description>
        <inlineHelpText>Name of Pricing Item, that will be presented on the Invoice (if no Name will be provided during configuration, Label defined in Product Catalog will be taken)</inlineHelpText>
        <label>Invoicing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price configured for given Pricing Item</description>
        <inlineHelpText>Price configured for given Pricing Item</inlineHelpText>
        <label>Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_Type__c</fullName>
        <description>Type of Pricing Item taken from assigned Pricing Item Definition</description>
        <formula>TEXT(Pricing_Item__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of Pricing Item taken from assigned Pricing Item Definition</inlineHelpText>
        <label>Pricing Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Item__c</fullName>
        <description>Reference to Pricing Item Definition</description>
        <inlineHelpText>Reference to Pricing Item Definition</inlineHelpText>
        <label>Pricing Item</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Service Pricing Items</relationshipLabel>
        <relationshipName>Service_Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Service Bundle, for which Pricing Item was assigned</description>
        <inlineHelpText>Service Bundle, for which Pricing Item was assigned</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Service Pricing Items</relationshipLabel>
        <relationshipName>Service_Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Service Component, for which Pricing Item was assigned</description>
        <inlineHelpText>Service Component, for which Pricing Item was assigned</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Pricing Items</relationshipLabel>
        <relationshipName>Service_Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>ID of Pricing Item from Local System</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Pricing Item from Local System</inlineHelpText>
        <label>Source Record Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Date, from which given Price should be invoiced</description>
        <inlineHelpText>Date, from which given Price should be invoiced</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Date, till which given Price should be invoiced</description>
        <inlineHelpText>Date, till which given Price should be invoiced</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Service Pricing Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NegativeSPRI</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Source_Record_Id__c</columns>
        <columns>CSR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Record_Id__c</field>
            <operation>startsWith</operation>
            <value>HUN_PRC</value>
        </filters>
        <filters>
            <field>Price__c</field>
            <operation>lessThan</operation>
            <value>HUF 0</value>
        </filters>
        <label>NegativeSPRI</label>
    </listViews>
    <nameField>
        <displayFormat>SPI{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Pricing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>